Fixing CSS
Prior to this, if I tried viewing the page in landscape mode, the episode-picker-button & pickedEpisode elements would overlap.

--- a/style.css
+++ b/style.css
@@ -8,24 +8,34 @@ body {
 	background-color: black;
 	color: white;
 	font-family: 'Textile';
-	font-size: 5vw;
+	font-size: 4vw;
+	margin: auto;
 }
 
-button {
+.wrapper {
+	text-align: center;
+}
+
+#episode-picker-button {
 	background-color: black;
 	color: white;
-	position: fixed;
+	position: static;
 	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
 	font-family: 'Textile';
-	font-size: 5vw;
+	font-size: 4vw;
+	padding: 5vw;
+	display: block;
+	margin: auto;
+	margin-top: 10vw;
+	width: 50%
 }
 
 #pickedEpisode {
-	position: absolute;
-	top: 80%;
+	position: static;
+	/*top: 80%;
 	left: 50%;
-	transform: translate(-50%, -65%);
+	/*transform: translate(-50%, -65%);*/
 	text-align: center;
+	margin: auto;
+	padding: 3vw;
 }
